<resources>
    <string name="app_name">My Application</string>
    <string name="crazy_layouts">Crazy Layouts</string>
    <string name="producto">Producto</string>
    <string name="subtotal">Subtotal</string>
    <string name="jab_n_de_manos_x_1">Jabón de manos x 1</string>
    <string name="_2">$2</string>
    <string name="pastas_duria_x_2">Pastas duria x 2</string>
    <string name="_18">$18</string>
    <string name="detergente_limpiadin_x_1">Detergente Limpiadin x 1</string>
    <string name="_13_4">$13,4</string>
    <string name="subtotal2">Subtotal</string>
    <string name="_43_4">$43,4</string>
    <string name="costo_env_o">Costo envío</string>
    <string name="_10">$10</string>
    <string name="cup_n">Cupón</string>
    <string name="_5">-$5</string>
    <string name="total">Total</string>
    <string name="_48_4">$48,4</string>
</resources>