<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:padding="25dp"
    tools:context=".MainActivity">
    <TableRow
        android:background="@color/black"
        >
        <TextView
            android:layout_margin="16dp"
            android:layout_weight="3"
            android:text="@string/crazy_layouts"
            android:textColor="@color/white"
        />
    </TableRow>
    <TableRow
        android:background="#5c9a90"
        >
        <TextView
            android:layout_margin="3dp"
            android:textColor="@color/white"
            android:layout_column="0"
            android:text="@string/producto" />
        <TextView
            android:layout_margin="3dp"
            android:textColor="@color/white"
            android:layout_column="2"
            android:text="@string/subtotal"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="0"
            android:text="@string/jab_n_de_manos_x_1"/>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="2"
            android:text="@string/_2"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="0"
            android:text="@string/pastas_duria_x_2"/>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="2"
            android:text="@string/_18"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="0"
            android:text="@string/detergente_limpiadin_x_1"/>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="2"
            android:text="@string/_13_4"/>
    </TableRow>
    <View
        android:layout_height="2dp"
        android:background="@color/black"/>

    <TableRow>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="1"
            android:text="@string/subtotal2"
            android:textColor="#2b695a"/>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="2"
            android:text="@string/_43_4"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="1"
            android:textColor="#2b695a"
            android:text="@string/costo_env_o"/>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="2"
            android:text="@string/_10"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="1"
            android:textColor="#2b695a"
            android:text="@string/cup_n"/>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="2"
            android:text="@string/_5"/>
    </TableRow>
    <TableRow>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="1"
            android:textColor="#2b695a"
            android:text="@string/total"/>
        <TextView
            android:layout_margin="3dp"
            android:layout_column="2"
            android:text="@string/_48_4"/>
    </TableRow>

</TableLayout>